Loop for Sending Msg-fix

--- a/WinSocketTest/WinSocketTest.vcxproj
+++ b/WinSocketTest/WinSocketTest.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\Test.cpp" />
+    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{379C4970-88D4-44AA-8327-49F677721076}</ProjectGuid>
