--- a/WinSocketTest/WinSocketTest.vcxproj.filters
+++ b/WinSocketTest/WinSocketTest.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\Test.cpp">
+    <ClCompile Include="Client.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Server.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
