--- a/WinSocketTest/WinSocketTest.vcxproj.filters
+++ b/WinSocketTest/WinSocketTest.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test.cpp">
+    <ClCompile Include="client.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
