--- a/WinSocketTest/WinSocketTest.vcxproj
+++ b/WinSocketTest/WinSocketTest.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="contraller.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{379C4970-88D4-44AA-8327-49F677721076}</ProjectGuid>
